# llm-council

./: .gitignore  CLAUDE.md  FEATURES.md  pyproject.toml
.claude/: command-guide.md  command-template.md  project-context.md  settings.local.json
.claude/output-styles/: quality-dev-mentor.md
.claude/plans/: phase2-implementation.md
.claude/scratch/: create-command.md  create-plan.md  tasker.md
backend/: config.py  council.py  formatters.py  github_api.py  langchain_models.py  main.py  test_council_integration.py  test_formatters.py  test_github_api.py  test_github_mcp_connection.py  test_langchain_models.py  test_org_repo_simple.py  test_pagination.py  test_vector_db.py  vector_db.py
docs/: DEVELOPMENT_PLAN.md  QUICK_SUMMARY.md  github-mcp-setup.md  vector-db-setup.md
