[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "langchain>=1.1.2",
    "langchain-anthropic>=1.2.0",
    "langchain-openai>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "mcp[cli]>=1.23.2",
    "pygithub>=2.8.1",
    "chromadb>=1.3.7",
    "langchain-chroma>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
